BLAAAAAAH REP A CA VUEJS

--- a/src/tpl/layouts/default.html
+++ b/src/tpl/layouts/default.html
@@ -20,10 +20,11 @@
 	</form> -->
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="http://code.jquery.com/jquery-1.11.1.js"></script>
-	<script src="/client/MobdesClient.js"></script>
+	<script src="/mobdes/common/Message.js"></script>
+	<script src="/mobdes/client/MobdesClient.js"></script>
 	<script>
 		var mobdes = new MobdesClient();
-		mobdes.connect('desktop');
+		// mobdes.connect('desktop');
 	</script>
 </body>
 </html>
